# operator-console

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml  release.yml
backend/: README.md  pyproject.toml
backend/src/auspexai_operator_console/: __init__.py  agent_admin.py  apidocs.py  auth.py  cli.py  config.py  main.py  passphrase_store.py  proxy.py
backend/tests/: conftest.py  test_agent_admin.py  test_apidocs.py  test_proxy.py
frontend/: README.md  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/lib/: live.ts
frontend/src/lib/components/: ActivityHeart.svelte  LaneStrip.svelte  LiveDot.svelte  Nav.svelte  TenantApplications.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/accounts/: +page.svelte
frontend/src/routes/accounts/[id]/: +page.svelte
frontend/src/routes/audit/: +page.svelte
frontend/src/routes/experiments/: +page.svelte
frontend/src/routes/experiments/[id]/: +page.svelte
frontend/src/routes/governance/audit/: +page.svelte
frontend/src/routes/governance/config/: +page.svelte
frontend/src/routes/models/: +page.svelte
frontend/src/routes/receipts/: +page.svelte
frontend/src/routes/requests/: +page.svelte
frontend/src/routes/scheduler/: +page.svelte
frontend/src/routes/tenants/: +page.svelte
frontend/src/routes/workers/: +page.svelte
frontend/src/routes/workers/[id]/: +page.svelte
