[project]
name = "auspexai-operator-console"
dynamic = ["version"]
description = "Maintainer's privileged dashboard for the AuspexAI volunteer compute network"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "AuspexAI Maintainers", email = "contact@auspexai.network" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "click>=8.1",
    "itsdangerous>=2.2",
    "cryptography>=42",
]

[project.optional-dependencies]
secret-service = [
    "SecretStorage>=3.3",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff==0.15.20",
]

[project.scripts]
auspexai-operator-console = "auspexai_operator_console.cli:main"

[project.urls]
Homepage = "https://auspexai.network"
Repository = "https://github.com/auspexai/operator-console"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version derived from git tags (hatch-vcs), stamped at build. pyproject is in
# backend/, .git is in the repo root — point setuptools_scm one level up. See
# version_provenance.md (V-M1).
[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.hatch.build.targets.wheel]
packages = ["src/auspexai_operator_console"]
# `static/` ships SOLELY via force-include below. Exclude the whole dir from the
# default packages file-selection — otherwise every built static file is added
# twice (once here off disk, once via force-include) and hatchling >=1.x hard-
# errors on the first duplicate wheel path. (Older hatchling silently deduped;
# a newer one pulled by `uv build` made it fatal — the release v0.1.4 build
# failed first on static/.gitkeep, then on static/index.html.)
exclude = ["src/auspexai_operator_console/static/**"]

# Force-include the frontend-built static bundle if present at build time.
[tool.hatch.build.targets.wheel.force-include]
"src/auspexai_operator_console/static" = "auspexai_operator_console/static"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
